# bazel_rules_hdl

./: .bazelrc  MODULE.bazel  README.md  cloudbuild.yaml  init.bzl
cocotb/: cocotb.bzl  cocotb_wrapper.py
cocotb/tests/: BUILD.bazel
dependency_support/: copy.bzl  dependency_support.bzl  pdks_extension.bzl  pip_requirements.in  pip_requirements.txt  tools_extension.bzl
dependency_support/at_clifford_yosys/: bundled.BUILD.bazel
dependency_support/com_google_skywater_pdk/: build_defs.bzl  bundled.BUILD.bazel  com_google_skywater_pdk.bzl  declare_cell_library.bzl
dependency_support/com_icarus_iverilog/: bundled.BUILD.bazel  iverilog.sh  vvp.sh
dependency_support/org_theopenroadproject/: 01-visibility.patch  02-toolchains_llvm.patch  03-tcl_wrap_cc.patch  04-include_copts.patch  BUILD
dependency_support/org_theopenroadproject_asap7_pdk_r1p7/: BUILD.bazel  cells_info.bzl
dependency_support/org_theopenroadproject_asap7sc7p5t_28/: BUILD.bazel
flows/: flows.bzl
flows/analysis/: build_defs.bzl
flows/openroad/: build_defs.bzl
flows/yosys/: build_defs.bzl
gds_write/: BUILD
pdk/liberty/: BUILD
place_and_route/: open_road.bzl
place_and_route/private/: benchmark.bzl  global_routing.bzl  report_power.bzl
static_timing/: build_defs.bzl
synthesis/: build_defs.bzl
tools/: BUILD  test_everything.py
