# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   Icarus Verilog is a Verilog simulation and synthesis tool.
#   Use :iverilog and :vvp targets in your genrules.

load("@rules_flex//flex:flex.bzl", "flex", "flex_cc_library")
load("@rules_bison//bison:bison.bzl", "bison", "bison_cc_library")
load("@rules_hdl//dependency_support/com_icarus_iverilog:build-plugins.bzl", "vpi_binary")
load("@rules_hdl//dependency_support:pseudo_configure.bzl", "pseudo_configure")
load("@rules_hdl//dependency_support:copy.bzl", "copy")

# The only two exported labels are iverilog and vvp. They are enough
# to run simple simulations.
package(
    default_visibility = ["//visibility:private"],
    features = [
        "-layering_check",  # vpi/fastlz.c including itself
        "-parse_headers",  # missing: `size_t` definition in stab.h, `using string` in parse_api.h
    ],
)

licenses(["restricted"])  # GPLv2

exports_files([
    "LICENSE",
    "build-plugins",
])

# This wrapper around iverilog compiler is to be used by
# simulations. A typical genrule will look similar to gen_hello.vvp
# below.
sh_binary(
    name = "iverilog",
    srcs = ["@rules_hdl//dependency_support/com_icarus_iverilog:iverilog.sh"],
    data = [
        "vvp.conf",
        ":iverilog-bin",
        ":ivl",
        ":ivlpp",
        ":vvp-bin",
        ":vvp_tgt",
        ":system_vpi",
        ":v2005_math_vpi",
        ":v2009_vpi",
        ":va_math_vpi",
        ":vhdl_sys_vpi",
        ":vhdl_textio_vpi",
    ],
    output_licenses = ["unencumbered"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_shell//shell/runfiles",
    ],
)

genrule(
    name = "vvp_conf",
    srcs = ["tgt-vvp/vvp.conf.in"],
    outs = ["vvp.conf"],
    cmd = "echo 'flag:VVP_EXECUTABLE=/unused' | cat $(location :tgt-vvp/vvp.conf.in) - > $@",
)

# This wrapper around vvp simulator is to be used by simulations. A
# typical genrule will look similar to run_hello below.
sh_binary(
    name = "vvp",
    srcs = ["@rules_hdl//dependency_support/com_icarus_iverilog:vvp.sh"],
    data = [
        ":iverilog-bin",
        ":system_vpi",
        ":v2005_math_vpi",
        ":v2009_vpi",
        ":va_math_vpi",
        ":vhdl_sys_vpi",
        ":vhdl_textio_vpi",
        ":vvp-bin",
    ],
    output_licenses = ["unencumbered"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_shell//shell/runfiles",
    ],
)

# API for writing VPI extensions.
cc_library(
    name = "vpi_user",
    srcs = [":_pli_types_h"],
    hdrs = ["vpi_user.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ivl-misc",
    srcs = [
        "libmisc/LineInfo.cc",
        "libmisc/StringHeap.cc",
    ],
    hdrs = [
        "libmisc/LineInfo.h",
        "libmisc/StringHeap.h",
    ],
    copts = ["-Wno-unused-variable"],
    includes = ["libmisc"],
)

cc_binary(
    name = "ivl",
    srcs = glob(
        [
            "*.cc",
            "*.h",
        ],
        exclude = ["elab_anet.cc"],
    ) + [
        ":config_h",
        "vvp/ivl_dlfcn.h",
        ":lexor_keyword_cc",
        ":version_tag_h",
        ":parse_gen_cc",
        ":parse_h",
        ":syn-rules_gen_cc",
        ":syn-rules_h",
        ":lexor_gen_cc",
    ],
    # Really poor code hygiene. Produces mounds of warnings.
    copts = ["-w"],
    # Do not sort: dot last.
    includes = [
        "libmisc",
        ".",
    ],
    linkopts = [
        "-ldl",
        "-Wl,--export-dynamic",
        "-Wl,-no-pie",
    ],
    deps = [
        ":ivl-misc",
        ":vpi_user",
    ],
)

genrule(
    name = "lexor_l",
    srcs = ["lexor.lex"],
    outs = ["lexor.l"],
    cmd = "cp $< $@",
)

bison(
    name = "parse_internal",
    src = "parse.y",
    bison_options = ["-p", "VL"],
    
)

filegroup(
    name = "parse_gen_src",
    srcs = [":parse_internal"],
    output_group = "cc_srcs",
)

filegroup(
    name = "parse_gen_hdr",
    srcs = [":parse_internal"],
    output_group = "cc_hdrs",
)

copy(
    name = "parse_gen_cc",
    src = ":parse_gen_src",
    out = "parse_gen.cc",
)

copy(
    name = "parse_h",
    src = ":parse_gen_hdr",
    out = "parse.h",
)

bison(
    name = "syn-rules_internal",
    src = "syn-rules.y",
    bison_options = ["-p", "syn_"],
    
)

filegroup(
    name = "syn-rules_gen_src",
    srcs = [":syn-rules_internal"],
    output_group = "cc_srcs",
)

filegroup(
    name = "syn-rules_gen_hdr",
    srcs = [":syn-rules_internal"],
    output_group = "cc_hdrs",
)

copy(
    name = "syn-rules_gen_cc",
    src = ":syn-rules_gen_src",
    out = "syn-rules_gen.cc",
)

copy(
    name = "syn-rules_h",
    src = ":syn-rules_gen_hdr",
    out = "syn-rules.h",
)

flex(
    name = "lexor_internal",
    src = ":lexor_l",
)

filegroup(
    name = "lexor_gen_src",
    srcs = [":lexor_internal"],
    output_group = "cc_srcs",
)

copy(
    name = "lexor_gen_cc",
    src = ":lexor_gen_src",
    out = "lexor_gen.cc",
)

cc_binary(
    name = "iverilog-bin",
    srcs = glob([
        "driver/*.c",
        "driver/*.h",
    ]) + [
        ":config_h",
        "ivl_alloc.h",
        "version_base.h",
        ":version_tag_h",
    ],
    copts = [
        "-D_GNU_SOURCE",
        "-std=c11",
        "-fcommon",
    ],
    defines = [
        'IVL_LIB="\\\"\\\""',
        'IVL_SUFFIX="\\\"\\\""',
        'IVL_INCLUDE_INSTALL_DIR="\\\"\\\""',
    ],
    # Do not sort: dot last.
    includes = [
        "driver",
        "libmisc",
        ".",
    ],
    deps = [
        ":cflexor",
        ":cfparse",
    ],
)

copy(
    name = "cflexor_l",
    src = "driver/cflexor.lex",
    out = "driver/cflexor.l",
)

flex_cc_library(
    name = "cflexor",
    src = ":cflexor_l",
    deps = [
        ":driver_hdrs",
        ":cfparse",
    ],
)

cc_library(
    name = "driver_hdrs",
    hdrs = glob(["driver/*.h"]),
    includes = ["driver"],
)

cc_library(
    name = "root_hdrs",
    hdrs = glob(["*.h"]) + [
        ":_pli_types_h",
        ":config_h",
    ],
    includes = ["."],
)

bison_cc_library(
    name = "cfparse",
    src = "driver/cfparse.y",
    bison_options = ["-p", "cf"],
    include_prefix = "driver",
    deps = [
        ":driver_hdrs",
        ":root_hdrs",
    ],
)

cc_binary(
    name = "vvp-bin",
    srcs = glob([
        "vvp/*.cc",
        "vvp/*.h",
    ]) + [
        "ivl_alloc.h",
        "sv_vpi_user.h",
        "version_base.h",
        ":version_tag_h",
        ":gen_tables",
        ":vvp_gen__vvp_config_h",
        ":vvp_parse_gen_cc",
        ":vvp_parse_h",
        ":vvp_flexor_gen_cc",
    ],
    copts = [
        "-O2",  # Optimized binary regardless of configuration.
        "-Wno-implicit-fallthrough",
        "-include",
        "vvp_config_fixed/config.h",
        "-iquote",
        "external/+tools_extension+com_icarus_iverilog/vvp",
    ],
    # Do not sort: dot last.
    includes = [
        "vvp",
        ".",
    ],
    linkopts = [
        "-ldl",
        "-Wl,--export-dynamic",
    ],
    deps = [
        ":vpi_user",
        ":vvp_config_hdrs",
        "@bzip2//:bz2",
        "@zlib//:zlib",
        "@readline//:readline",
    ],
)

cc_library(
    name = "vvp_hdrs",
    hdrs = glob(["vvp/*.h"]),
    includes = ["vvp"],
)

cc_library(
    name = "vvp_config_hdrs",
    hdrs = [":vvp_gen__vvp_config_h"],
    include_prefix = "vvp_config_fixed",
    strip_include_prefix = "vvp_config_dir",
)

genrule(
    name = "vvp_parse_y_fixed",
    srcs = ["vvp/parse.y"],
    outs = ["vvp_parse_fixed.y"],
    cmd = "sed 's|\"parse_misc.h\"|\"vvp/parse_misc.h\"|' $< > $@",
)

bison(
    name = "vvp_parse_internal",
    src = ":vvp_parse_y_fixed",
    
)

filegroup(
    name = "vvp_parse_gen_src",
    srcs = [":vvp_parse_internal"],
    output_group = "cc_srcs",
)

filegroup(
    name = "vvp_parse_gen_hdr",
    srcs = [":vvp_parse_internal"],
    output_group = "cc_hdrs",
)

copy(
    name = "vvp_parse_gen_cc",
    src = ":vvp_parse_gen_src",
    out = "vvp_parse_gen.cc",
)

copy(
    name = "vvp_parse_h",
    src = ":vvp_parse_gen_hdr",
    out = "vvp_parse.h",
)

genrule(
    name = "vvp_lexor_l",
    srcs = ["vvp/lexor.lex"],
    outs = ["vvp_lexor.l"],
    cmd = "sed -e 's|\"parse.h\"|\"vvp_parse.h\"|' -e 's|\"parse_misc.h\"|\"vvp/parse_misc.h\"|' $< > $@",
)

flex(
    name = "vvp_flexor_internal",
    src = ":vvp_lexor_l",
)

filegroup(
    name = "vvp_flexor_gen_src",
    srcs = [":vvp_flexor_internal"],
    output_group = "cc_srcs",
)

copy(
    name = "vvp_flexor_gen_cc",
    src = ":vvp_flexor_gen_src",
    out = "vvp_flexor_gen.cc",
)

cc_binary(
    name = "draw_tt",
    srcs = ["vvp/draw_tt.c"],
)

genrule(
    name = "gen_tables",
    outs = ["vvp_gen/tables.cc"],
    cmd = "$(location :draw_tt) > $@",
    tools = [":draw_tt"],
)

cc_binary(
    name = "ivlpp",
    srcs = glob([
        "ivlpp/*.c",
        "ivlpp/*.h",
    ]) + [
        ":config_h",
        "ivl_alloc.h",
        "version_base.h",
        ":version_tag_h",
    ],
    copts = ["-Wno-unused-variable"],
    # Do not sort: dot last.
    includes = [
        "ivlpp",
        ".",
    ],
    deps = [":ivlpp_lexor"],
)

copy(
    name = "ivlpp_lexor_l",
    src = "ivlpp/lexor.lex",
    out = "ivlpp_lexor.l",
)

cc_library(
    name = "ivlpp_hdrs",
    hdrs = glob(["ivlpp/*.h"]),
    includes = ["ivlpp"],
)

flex_cc_library(
    name = "ivlpp_lexor",
    src = ":ivlpp_lexor_l",
    deps = [
        ":root_hdrs",
        ":ivlpp_hdrs",
    ],
)

vpi_binary(
    name = "system_vpi",
    srcs = [
        ":config_h",
        "ivl_alloc.h",
        "sv_vpi_user.h",
        "version_base.h",
        "vpi/fastlz.c",
        "vpi/fastlz.h",
        "vpi/fstapi.c",
        "vpi/fstapi.h",
        "vpi/lxt_write.c",
        "vpi/lxt_write.h",
        "vpi/lxt2_write.c",
        "vpi/lxt2_write.h",
        "vpi/lz4.c",
        "vpi/lz4.h",
        "vpi/mt19937int.c",
        "vpi/sdf_parse_priv.h",
        "vpi/sdf_priv.h",
        "vpi/stringheap.c",
        "vpi/stringheap.h",
        "vpi/sys_convert.c",
        "vpi/sys_countdrivers.c",
        "vpi/sys_darray.c",
        "vpi/sys_deposit.c",
        "vpi/sys_display.c",
        "vpi/sys_fileio.c",
        "vpi/sys_finish.c",
        "vpi/sys_fst.c",
        "vpi/sys_icarus.c",
        "vpi/sys_lxt.c",
        "vpi/sys_lxt2.c",
        "vpi/sys_plusargs.c",
        "vpi/sys_priv.c",
        "vpi/sys_priv.h",
        "vpi/sys_queue.c",
        "vpi/sys_random.c",
        "vpi/sys_random.h",
        "vpi/sys_random_mti.c",
        "vpi/sys_readmem.c",
        "vpi/sys_readmem_lex.h",
        "vpi/sys_scanf.c",
        "vpi/sys_sdf.c",
        "vpi/sys_table.c",
        "vpi/sys_time.c",
        "vpi/sys_vcd.c",
        "vpi/sys_vcdoff.c",
        "vpi/table_mod.c",
        "vpi/table_mod.h",
        "vpi/vams_simparam.c",
        "vpi/vcd_priv.c",
        "vpi/vcd_priv.h",
        "vpi/vcd_priv2.cc",
        "vpi/vpi_config.h",
        "vpi/wavealloca.h",
    ],
    out = "system.vpi",
    # Optimized binary regardless of configuration.
    copts = [
        "$(STACK_FRAME_UNLIMITED)",
        "-O2",
        # "-std=c11",
        # was for for-loop-indices, removed to allow vcd_priv2.cc to compile
    ],
    includes = [
        ".",
        "vpi",
    ],
    # The code has atrocious const hygiene. Produces mounds of warnings.
    deps = [
        ":vpi_user",
        ":table_mod_lexor_lex",
        ":table_mod_parse",
        ":vpi_sdf_lexor",
        ":sdf_parse",
        ":vpi_sys_readmem_lex",
        "@bzip2//:bz2",
        "@zlib//:zlib",
    ],
)

cc_library(
    name = "vpi_hdrs",
    hdrs = glob(["vpi/*.h"]),
    includes = ["vpi"],
)

bison_cc_library(
    name = "table_mod_parse",
    src = "vpi/table_mod_parse.y",
    bison_options = ["-p", "tblmod"],
    include_prefix = "vpi",
    deps = [
        ":root_hdrs",
        ":vpi_hdrs",
    ],
)

copy(
    name = "table_mod_lexor_lex_l",
    src = "vpi/table_mod_lexor.lex",
    out = "vpi/table_mod_lexor.l",
)

flex_cc_library(
    name = "table_mod_lexor_lex",
    src = ":table_mod_lexor_lex_l",
    deps = [
        ":root_hdrs",
        ":vpi_hdrs",
        ":table_mod_parse",
    ],
)

bison_cc_library(
    name = "sdf_parse",
    src = "vpi/sdf_parse.y",
    bison_options = ["-p", "sdf"],
    include_prefix = "vpi",
    deps = [
        ":root_hdrs",
        ":vpi_hdrs",
    ],
)

copy(
    name = "vpi_sdf_lexor_l",
    src = "vpi/sdf_lexor.lex",
    out = "vpi/sdf_lexor.l",
)

flex_cc_library(
    name = "vpi_sdf_lexor",
    src = ":vpi_sdf_lexor_l",
    deps = [
        ":root_hdrs",
        ":vpi_hdrs",
        ":sdf_parse",
    ],
)

copy(
    name = "vpi_sys_readmem_lex_l",
    src = "vpi/sys_readmem_lex.lex",
    out = "vpi/sys_readmem_lex.l",
)

flex_cc_library(
    name = "vpi_sys_readmem_lex",
    src = ":vpi_sys_readmem_lex_l",
    deps = [
        ":root_hdrs",
        ":vpi_hdrs",
    ],
)

vpi_binary(
    name = "vhdl_sys_vpi",
    srcs = [
        "ivl_alloc.h",
        "sv_vpi_user.h",
        "vpi/sys_priv.c",
        "vpi/sys_priv.h",
        "vpi/vhdl_table.c",
        "vpi/vpi_config.h",
    ],
    out = "vhdl_sys.vpi",
    copts = ["-O2"],
    includes = [
        ".",
        "vpi",
    ],
    deps = [
        ":vpi_user",
    ],
)

vpi_binary(
    name = "vhdl_textio_vpi",
    srcs = [
        "ivl_alloc.h",
        "sv_vpi_user.h",
        "vpi/sys_priv.c",
        "vpi/sys_priv.h",
        "vpi/vhdl_textio.c",
        "vpi/vpi_config.h",
    ],
    out = "vhdl_textio.vpi",
    copts = ["-O2"],
    includes = [
        ".",
        "vpi",
    ],
    deps = [
        ":vpi_user",
    ],
)

vpi_binary(
    name = "va_math_vpi",
    srcs = [
        "ivl_alloc.h",
        "vpi/va_math.c",
        "vpi/vpi_config.h",
    ],
    out = "va_math.vpi",
    copts = ["-O2"],  # Optimized binary regardless of configuration.
    includes = [
        ".",
        "vpi",
    ],
    # The code has atrocious const hygiene. Produces mounds of warnings.
    deps = [
        ":vpi_user",
    ],
)

vpi_binary(
    name = "v2005_math_vpi",
    srcs = [
        "ivl_alloc.h",
        "sv_vpi_user.h",
        "vpi/sys_clog2.c",
        "vpi/v2005_math.c",
        "vpi/vpi_config.h",
    ],
    out = "v2005_math.vpi",
    copts = ["-O2"],  # Optimized binary regardless of configuration.
    includes = [
        ".",
        "vpi",
    ],
    # The code has atrocious const hygiene. Produces mounds of warnings.
    deps = [
        ":vpi_user",
    ],
)

vpi_binary(
    name = "vpi_debug_vpi",
    srcs = ["vpi/vpi_debug.c"],
    out = "vpi_debug.vpi",
    copts = ["-O2"],
    includes = [
        ".",
        "vpi",
    ],
    deps = [
        ":vpi_user",
    ],
)

vpi_binary(
    name = "v2009_vpi",
    srcs = [
        "ivl_alloc.h",
        "sv_vpi_user.h",
        "vpi/sys_priv.c",
        "vpi/sys_priv.h",
        "vpi/v2009_array.c",
        "vpi/v2009_bitvec.c",
        "vpi/v2009_enum.c",
        "vpi/v2009_string.c",
        "vpi/v2009_table.c",
        "vpi/vpi_config.h",
    ],
    out = "v2009.vpi",
    copts = [
        "-O2",  # Optimized binary regardless of configuration.
    ],
    includes = [
        ".",
        "vpi",
    ],
    deps = [
        ":vpi_user",
    ],
)

vpi_binary(
    name = "vvp_tgt",
    srcs = glob([
        "tgt-vvp/*.c",
        "tgt-vvp/*.h",
    ]) + [
        "ivl_alloc.h",
        "ivl_target.h",
        "version_base.h",
        ":version_tag_h",
        ":tgt_vvp__vvp_config_h",
    ],
    out = "vvp.tgt",
    copts = [
        "-std=c11",
        "-Wno-implicit-function-declaration",
        "-Wno-int-conversion",
    ],
    includes = [
        ".",
        "tgt-vvp",
    ],
    # The code has atrocious const hygiene. Produces mounds of warnings.
)

genrule(
    name = "_pli_types_h",
    srcs = ["_pli_types.h.in"],
    outs = ["_pli_types.h"],
    cmd = "cat $(location :_pli_types.h.in) | sed 's/# undef HAVE_INTTYPES_H/# define HAVE_INTTYPES_H 1/' > $@",
)

genrule(
    name = "lexor_keyword_cc",
    srcs = ["lexor_keyword.gperf"],
    tools = ["@gperf//:gperf"],
    outs = ["lexor_keyword.cc"],
    cmd = "$(location @gperf//:gperf) -o -i 7 -C -k 1-4,6,9,$$ -H keyword_hash -N check_identifier -t $(location :lexor_keyword.gperf) > $@",
    message = "Generating perfect hash function from $(SRCS)",
)

# In the following genrules we do an extremely crude approximation of a
# configuration step -- workable now given the limited set of
# platforms/environments we intend to target.

HAVE_CONFIG_SUFFIXES = "TIMES|IOSFWD|GETOPT_H|INTTYPES_H|DLFCN_H|LIBREADLINE|LIBZ|LIBBZ2|LROUND|SYS_WAIT_H|ALLOCA_H|FSEEKO|LIBPTHREAD|REALPATH"
HAVE_CONFIG_RE = "HAVE_(%s)" % HAVE_CONFIG_SUFFIXES

DEFS = ["HAVE_IOSFWD", "HAVE_DLFCN_H", "HAVE_GETOPT_H", "HAVE_LIBREADLINE", "HAVE_READLINE_READLINE_H", "HAVE_LIBHISTORY", "HAVE_READLINE_HISTORY_H", "HAVE_INTTYPES_H", "HAVE_LROUND", "HAVE_LLROUND", "HAVE_NAN", "UINT64_T_AND_ULONG_SAME", "HAVE_SYS_RESOURCE_H", "LINUX"]

pseudo_configure(
    name = "tgt_vvp__vvp_config_h",
    src = "tgt-vvp/vvp_config.h.in",
    out = "tgt-vvp/vvp_config.h",
    defs = ["HAVE_STDINT_H", "HAVE_INTTYPES_H", "_LARGEFILE_SOURCE"],
    mappings = {},
)

pseudo_configure(
    name = "config_h",
    src = "config.h.in",
    out = "config.h",
    defs = ["HAVE_TIMES", "HAVE_IOSFWD", "HAVE_GETOPT_H", "HAVE_INTTYPES_H", "HAVE_DLFCN_H", "HAVE_LIBREADLINE", "HAVE_LIBZ", "HAVE_LIBBZ2", "HAVE_LROUND", "HAVE_SYS_WAIT_H", "HAVE_ALLOCA_H", "HAVE_FSEEKO", "HAVE_LIBPTHREAD", "HAVE_REALPATH"],
    mappings = {},
)

genrule(
    name = "vpi__vpi_config_h",
    srcs = ["vpi/vpi_config.h.in"],
    outs = ["vpi/vpi_config.h"],
    cmd = "perl -p -e 's/# undef (\\w+)/#define $$1 1/' $< > $@",
    message = "Configuring vpi/vpi_config.h.in",
)

pseudo_configure(
    name = "vvp_gen__vvp_config_h",
    src = "vvp/config.h.in",
    out = "vvp_config_dir/config.h",
    defs = DEFS,
    mappings = {"SIZEOF_UNSIGNED_LONG_LONG": "8", "SIZEOF_UNSIGNED_LONG": "8", "SIZEOF_UNSIGNED": "4", "SIZEOF_VOID_P": "8", "USE_READLINE": "", "USE_HISTORY": "", "MODULE_DIR": '"."', "__STDC_FORMAT_MACROS": "", "TIME_FMT_O": '"lo"', "TIME_FMT_U": '"lu"', "TIME_FMT_X": '"lx"', "UL_AND_TIME64_SAME": "", "i64round": "lround", "nan(x)": "(NAN)", "INFINITY": "HUGE_VAL", "LU": '""', "TU": '""'},
)

genrule(
    name = "version_tag_h",
    outs = ["version_tag.h"],
    cmd = "echo '#define VERSION_TAG \"v12_0\"' > $@",
)

# Trivial integration tests to confirm iverilog is minimally functional.

genrule(
    name = "hello_vvp",
    srcs = ["@rules_hdl//dependency_support/com_icarus_iverilog:hello.v"],
    outs = ["hello.vvp"],
    cmd = (
        "$(location :iverilog) " +
        "-o $@ " +
        "$<"
    ),
    tools = [
        ":iverilog",
        ":vvp",  # to resolve module include
    ],
)

vpi_binary(
    name = "hello_vpi",
    srcs = ["@rules_hdl//dependency_support/com_icarus_iverilog:hello_vpi.c"],
    out = "hello.vpi",
    deps = [":vpi_user"],
)

genrule(
    name = "run_hello",
    srcs = [":hello_vvp"],
    outs = ["hello.out"],
    cmd = (
        "$(location :vvp) " +
        "-M$$(dirname $(location :hello_vpi)) " +
        "-mhello $< > $@ "
    ),
    tools = [
        ":hello_vpi",
        ":vvp",
    ],
)

sh_test(
    name = "hello_verilog_test",
    srcs = ["@rules_hdl//dependency_support/com_icarus_iverilog:hello_verilog_test.sh"],
    args = ["$(location :run_hello)"],
    data = [":run_hello"],
)
